--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
